--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "php": "^8.2"
+        "php": "^8.2",
+        "illuminate/support": "^11.0|^12.0"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +19,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "AhsanDevs\\AhsanDevsServiceProvider"
+                "Spanvel\\CoreServiceProvider"
             ]
         }
     },
