--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "php": "^8.2",
         "illuminate/support": "^11.0|^12.0"
     },
+    "require-dev": {
+        "pestphp/pest": "^3.8"
+    },
     "autoload": {
         "psr-4": {
             "Spanvel\\": "src/"
@@ -25,7 +28,10 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
