--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^11.0|^12.0"
+        "illuminate/support": "^12.0"
     },
     "require-dev": {
+        "orchestra/testbench": "^10.6",
         "pestphp/pest": "^3.8"
     },
     "autoload": {
