--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "illuminate/support": "^12.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.24",
         "orchestra/testbench": "^10.6",
         "pestphp/pest": "^4.0"
     },
