--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Spanvel\\CoreServiceProvider"
+                "Spanvel\\CoreServiceProvider",
+                "Spanvel\\Authorization\\AuthorizationServiceProvider"
             ]
         }
     },
