--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -2,41 +2,49 @@
   "name": "[[name]]",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "scripts": {
     "dev": "vite --host",
-    "build": "npm run lint && vue-tsc --noEmit && vite build",
-    "format": "prettier --write resources/js/**/*.{ts,tsx,js,jsx,vue}",
-    "format:check": "prettier --check resources/js/**/*.{ts,tsx,js,jsx,vue}",
-    "lint": "eslint ./resources/js/**/*.{ts,tsx,js,jsx,vue}",
-    "lint:ignore-warnings": "eslint ./resources/js/**/*.{ts,tsx,js,jsx,vue} --quiet",
-    "lint:fix": "eslint ./resources/js/**/*.{ts,tsx,js,jsx,vue} --fix"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix",
+    "lint": "run-s lint:*",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "tailwindcss": "^4.0.12",
-    "vue": "^3.5.13"
+    "ahsandevs": "^0.1.19",
+    "lucide-vue-next": "^0.539.0",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@floating-ui/vue": "^1.1.6",
-    "@heroicons/vue": "^2.2.0",
-    "@tailwindcss/postcss": "^4.0.12",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vueuse/core": "^13.0.0",
-    "ahsandevs": "^0.1.19",
-    "ahsandevs-vite-plugin": "^0.2.0",
-    "cooltipz-css": "^2.3.1",
-    "eslint": "9.22.0",
-    "eslint-plugin-vue": "^10.0.0",
-    "lucide-vue-next": "^0.479.0",
-    "pinia": "^3.0.1",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "thetheme": "^0.3.4",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.2.1",
-    "vue-eslint-parser": "^10.1.1",
-    "vue-router": "^4.5.0",
-    "vue-tsc": "^2.2.8"
+    "@prettier/plugin-oxc": "^0.0.4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^22.16.5",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.7.0",
+    "@vueuse/core": "^13.6.0",
+    "ahsandevs-vite-plugin": "^0.2.1",
+    "eslint": "^9.33.0",
+    "eslint-plugin-oxlint": "~1.11.2",
+    "eslint-plugin-vue": "~10.4.0",
+    "jiti": "^2.5.1",
+    "npm-run-all2": "^8.0.4",
+    "oxlint": "~1.11.2",
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "typescript": "~5.8.0",
+    "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-vue-devtools": "^8.0.0",
+    "vue-tsc": "^3.0.5"
   }
 }
