--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -21,10 +21,10 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.3.0",
-    "ahsandevs-vite-plugin": "^0.2.1",
     "oxlint": "^1.14.0",
-    "prettier": "3.6.2",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "spanvel-vite-plugin": "^0.1.0",
     "typescript": "~5.8.0",
     "vite": "npm:rolldown-vite@latest"
   }
