--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -18,33 +18,33 @@
   },
   "dependencies": {
     "ahsandevs": "^0.1.19",
-    "lucide-vue-next": "^0.539.0",
+    "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
-    "vue": "^3.5.18",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@prettier/plugin-oxc": "^0.0.4",
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/tsconfig": "^0.7.0",
-    "@vueuse/core": "^13.6.0",
-    "ahsandevs-vite-plugin": "^0.2.1",
-    "eslint": "^9.33.0",
-    "eslint-plugin-oxlint": "~1.11.2",
+    "@vue/tsconfig": "^0.8.1",
+    "@vueuse/core": "^13.9.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-oxlint": "~1.14.0",
     "eslint-plugin-vue": "~10.4.0",
     "jiti": "^2.5.1",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.11.2",
+    "oxlint": "~1.14.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "spanvel-vite-plugin": "^0.1.0",
     "typescript": "~5.8.0",
     "vite": "npm:rolldown-vite@latest",
-    "vite-plugin-vue-devtools": "^8.0.0",
-    "vue-tsc": "^3.0.5"
+    "vite-plugin-vue-devtools": "^8.0.1",
+    "vue-tsc": "^3.0.6"
   }
 }
