--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "laravel": {
             "providers": [
                 "Spanvel\\CoreServiceProvider",
+                "Spanvel\\Package\\PackageServiceProvider",
                 "Spanvel\\Authorization\\AuthorizationServiceProvider"
             ]
         }
