--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^12.0"
+        "illuminate/support": "^12.0",
+        "laravel/sanctum": "^4.2"
     },
     "require-dev": {
         "laravel/pint": "^1.24",
